--- a/index.html
+++ b/index.html
@@ -88,13 +88,6 @@
                 </div>
             </div>
             <div class="header-actions">
-                <button class="btn-customize" id="customizeBtn" title="Customize">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="3" />
-                        <path
-                            d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
-                    </svg>
-                </button>
                 <button class="btn-share" id="shareBtn">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="18" cy="5" r="3" />
@@ -300,21 +293,9 @@
         <section class="about-section">
             <div class="about-card">
                 <div class="about-logo">
-                    <!-- Stylized Chai symbol -->
-                    <svg class="chai-logo" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg">
-                        <defs>
-                            <linearGradient id="chaiGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color:#E11D48" />
-                                <stop offset="100%" style="stop-color:#BE123C" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="30" cy="30" r="28" fill="url(#chaiGradient)" />
-                        <!-- Stylized Chai (חי) symbol -->
-                        <path d="M20 18 L20 38 C20 42 24 44 28 44" stroke="white" stroke-width="4" fill="none"
-                            stroke-linecap="round" />
-                        <path d="M38 18 L38 32 M38 18 C38 18 32 18 32 24 L32 44" stroke="white" stroke-width="4"
-                            fill="none" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
+                    <img src="https://www.chailifeline.org/themes/custom/chai/logo.svg" alt="Chai Lifeline Logo"
+                        class="chai-logo-img"
+                        onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 120 40%27%3E%3Crect fill=%27%23E11D48%27 rx=%275%27 width=%27120%27 height=%2740%27/%3E%3Ctext x=%2760%27 y=%2726%27 text-anchor=%27middle%27 fill=%27white%27 font-family=%27system-ui%27 font-weight=%27bold%27 font-size=%2716%27%3EChai Lifeline%3C/text%3E%3C/svg%3E';">
                 </div>
                 <h3>About Chai Lifeline</h3>
                 <p>Chai Lifeline is the international children's health support network, dedicated to helping seriously
@@ -343,14 +324,50 @@
         </footer>
     </div>
 
-    <!-- Customization Modal -->
+    <!-- Password Modal -->
+    <div class="modal-overlay" id="passwordModal">
+        <div class="modal modal-password">
+            <div class="modal-header">
+                <h2>🔐 Admin Access</h2>
+                <button class="modal-close" id="closePasswordModal">×</button>
+            </div>
+            <div class="modal-body">
+                <p class="password-description">Enter your admin password to access page settings.</p>
+                <div class="form-group">
+                    <label for="adminPassword">Password</label>
+                    <input type="password" id="adminPassword" placeholder="Enter password" autocomplete="off">
+                    <p class="password-error" id="passwordError"></p>
+                </div>
+                <div class="first-time-setup" id="firstTimeSetup">
+                    <p>🆕 <strong>First time?</strong> Create your admin password below:</p>
+                    <div class="form-group">
+                        <label for="newPassword">Create Password</label>
+                        <input type="password" id="newPassword" placeholder="Create a password">
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" id="confirmPassword" placeholder="Confirm password">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-primary" id="submitPasswordBtn">Unlock Settings</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Customization Modal (Admin Only) -->
     <div class="modal-overlay" id="customizeModal">
         <div class="modal">
             <div class="modal-header">
-                <h2>Customize Your Page</h2>
+                <h2>⚙️ Page Settings</h2>
                 <button class="modal-close" id="closeModal">×</button>
             </div>
             <div class="modal-body">
+                <div class="admin-badge">
+                    <span class="admin-icon">🔓</span>
+                    <span>Admin Mode Active</span>
+                </div>
                 <div class="form-group">
                     <label for="inputName">Your Name</label>
                     <input type="text" id="inputName" placeholder="Enter your name">
@@ -405,9 +422,14 @@
                         <option value="pink">Rose Pink 🌸</option>
                     </select>
                 </div>
+                <hr class="divider">
+                <div class="form-group">
+                    <label for="changePassword">Change Admin Password</label>
+                    <input type="password" id="changePassword" placeholder="Leave blank to keep current">
+                </div>
             </div>
             <div class="modal-footer">
-                <button class="btn-secondary" id="resetBtn">Reset</button>
+                <button class="btn-secondary" id="resetBtn">Reset Data</button>
                 <button class="btn-primary" id="saveBtn">Save Changes</button>
             </div>
         </div>
