--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="msapplication-navbutton-color" content="#f97316">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <!-- Force Light Mode - Prevent dark mode color shifting -->
+    <meta name="color-scheme" content="light only">
+    <meta name="supported-color-schemes" content="light only">
+
     <!-- Apple Mobile Web App -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Bike4Chai">
