--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Outfit:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=8">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         </div>
 
         <!-- Main Container -->
-        <div class="container">
+        <div class="main-card">
             <!-- Header Section -->
             <header class="header">
                 <div class="logo-section">
